--- a/misty.html
+++ b/misty.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MUSIC PAGE</title>
-    <link rel="stylesheet" href="misty.css" />
+    <link rel="stylesheet" href="misty.css"/>
 </head>
 <body>
     <h1>
@@ -12,6 +12,6 @@
     <p class="word">Makes</p>
     <p class="word">Music</p>
     </h1>
-    <script> src="misty.js"</script>
+        <script src="misty.js"></script>
 </body>
 </html>
