--- a/misty.html
+++ b/misty.html
@@ -13,5 +13,6 @@
     <p class="word">Music</p>
     <span class="?">How will the world know?</span>
     </h1>
+    <script src="misty.js"></script>
 </body>
 </html>
